# switch_sm

./: README.md
include/: switch_sm.hpp
test/: CMakeLists.txt  state_machine_test.cpp  test_simple.cpp  test_tuple_switch.cpp
